# dwd-radolan-utils

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TESTING.md  main.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pre-commit.yml
examples/: .gitignore  grid_example.ipynb
src/dwd_radolan_utils/: __init__.py  catchment_area.py  download.py  extraction.py  geo_utils.py
src/dwd_radolan_utils/pysheds_helper/: plot_helper.py  utils.py
tests/: __init__.py  conftest.py  test_catchment_area.py  test_download.py  test_extraction.py  test_geo_utils.py  test_integration.py
